--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -1,6 +1,6 @@
 #=====================================================================================
 # 适配s905l3a (aarch64_generic)架构的OpenWrt构建工作流
-# 说明：使用指定的内核下载链接 ophub/kernel/releases/download/kernel_stable/6.12.41.tar.gz
+# 说明：使用指定内核和晶晨宝盒IPK文件进行构建
 #=====================================================================================
 
 name: Build OpenWrt for s905l3a with fixed kernel
@@ -17,7 +17,7 @@ on:
           - s905l3a
           - s905l3a-cm311
           - s905l3a-m401a
-      # 新增：允许指定具体内核版本，默认为6.12.41
+      # 允许指定具体内核版本，默认为6.12.41
       specific_kernel:
         description: "具体内核版本"
         required: true
@@ -44,6 +44,9 @@ env:
   ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
   TARGET_ARCH: "aarch64_generic"
   PACKAGE_REPO_BASE: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic"
+  # 晶晨宝盒指定版本IPK链接
+  AMLOGIC_IPK_URL: "https://github.com/ophub/luci-app-amlogic/releases/download/3.1.266/luci-app-amlogic_3.1.266_all.ipk"
+  AMLOGIC_I18N_IPK_URL: "https://github.com/ophub/luci-app-amlogic/releases/download/3.1.266/luci-i18n-amlogic-zh-cn_3.1.266_all.ipk"
 
 jobs:
   build:
@@ -140,7 +143,7 @@ jobs:
           echo "opkg_path=$OPKG_PATH" >> ${GITHUB_OUTPUT}
           echo "status=success" >> ${GITHUB_OUTPUT}
 
-      - name: 下载指定内核文件（6.12.41.tar.gz）
+      - name: 下载指定内核文件
         id: download_kernel
         working-directory: /builder
         run: |
@@ -189,39 +192,91 @@ jobs:
           src/gz immortalwrt_telephony ${PACKAGE_REPO_BASE}/telephony
           EOF
 
-      - name: 安装晶晨宝盒（如缺失）
+      - name: 安装晶晨宝盒（使用指定IPK文件）
         if: ${{ steps.download_rootfs.outputs.status == 'success' && steps.download_kernel.outputs.status == 'success' }}
         run: |
           ROOTFS_DIR="/builder/openwrt/rootfs"
           
+          # 挂载必要的系统目录
           sudo mount -o bind /dev $ROOTFS_DIR/dev
           sudo mount -o bind /dev/pts $ROOTFS_DIR/dev/pts
           sudo mount -o bind /proc $ROOTFS_DIR/proc
           sudo mount -o bind /sys $ROOTFS_DIR/sys
           sudo mount -o bind /etc/resolv.conf $ROOTFS_DIR/etc/resolv.conf
           
+          # 复制qemu模拟器
           sudo cp /usr/bin/qemu-aarch64-static $ROOTFS_DIR/usr/bin/
           sudo chmod +x $ROOTFS_DIR/usr/bin/qemu-aarch64-static
           
+          # 配置DNS
           sudo chroot $ROOTFS_DIR /bin/sh -c "echo 'nameserver 8.8.8.8' > /etc/resolv.conf"
           sudo chroot $ROOTFS_DIR /bin/sh -c "echo 'nameserver 114.114.114.114' >> /etc/resolv.conf"
           
+          # 创建临时目录存放IPK文件
+          sudo mkdir -p $ROOTFS_DIR/tmp/amlogic
+          sudo chmod 777 $ROOTFS_DIR/tmp/amlogic
+          
+          # 下载指定的晶晨宝盒IPK文件
+          echo "下载晶晨宝盒主程序: ${AMLOGIC_IPK_URL}"
+          if ! sudo wget -c "${AMLOGIC_IPK_URL}" -O "$ROOTFS_DIR/tmp/amlogic/luci-app-amlogic.ipk"; then
+            echo "错误：晶晨宝盒主程序下载失败"
+            exit 1
+          fi
+          
+          echo "下载晶晨宝盒中文语言包: ${AMLOGIC_I18N_IPK_URL}"
+          if ! sudo wget -c "${AMLOGIC_I18N_IPK_URL}" -O "$ROOTFS_DIR/tmp/amlogic/luci-i18n-amlogic-zh-cn.ipk"; then
+            echo "错误：晶晨宝盒中文语言包下载失败"
+            exit 1
+          fi
+          
+          # 更新包列表（解决依赖问题）
+          echo "更新opkg包列表..."
           retry=3
           while [ $retry -gt 0 ]; do
             if sudo chroot $ROOTFS_DIR /bin/sh -c "opkg update --no-check-certificate"; then
               break
             fi
             retry=$((retry - 1))
+            echo "opkg update失败，剩余重试次数：$retry"
             sleep 5
           done
           if [ $retry -eq 0 ]; then
-            echo "错误：opkg update失败"
+            echo "错误：opkg update最终失败"
             exit 1
           fi
           
+          # 安装必要依赖
+          echo "安装依赖包..."
           sudo chroot $ROOTFS_DIR /bin/sh -c "opkg install --no-check-certificate \
-            luci-app-amlogic amlogic-utils openwrt-install-amlogic"
+            luci-compat \
+            kmod-drm \
+            kmod-fb \
+            parted \
+            lsblk \
+            e2fsprogs \
+            fdisk \
+            attr \
+            tar \
+            gzip"
           
+          # 安装晶晨宝盒主程序
+          echo "安装晶晨宝盒主程序..."
+          if ! sudo chroot $ROOTFS_DIR /bin/sh -c "opkg install --no-check-certificate /tmp/amlogic/luci-app-amlogic.ipk"; then
+            echo "错误：晶晨宝盒主程序安装失败"
+            exit 1
+          fi
+          
+          # 安装中文语言包
+          echo "安装晶晨宝盒中文语言包..."
+          if ! sudo chroot $ROOTFS_DIR /bin/sh -c "opkg install --no-check-certificate /tmp/amlogic/luci-i18n-amlogic-zh-cn.ipk"; then
+            echo "错误：晶晨宝盒中文语言包安装失败"
+            exit 1
+          fi
+          
+          # 清理临时文件
+          sudo chroot $ROOTFS_DIR /bin/sh -c "rm -rf /tmp/amlogic"
+          
+          # 卸载挂载点
           sudo umount $ROOTFS_DIR/etc/resolv.conf
           sudo umount $ROOTFS_DIR/dev/pts
           sudo umount $ROOTFS_DIR/dev
